--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-New in 0.6c:
+New in 0.6d:
 * Total rewrite of libtool, along with a new model for library building.
 * Completely rewritten documentation for the new paradigm.
 * Sane handling of broken system linkers, such as the ones on AIX
@@ -8,6 +8,7 @@ New in 0.6c:
   libtool program.
 * Automatic mode guessing, based on the command line.
 * Support for new `-static' linking flag.
+* Support for stripping libraries during installation.
 * Library version information is now passed on the command line, not
   through a version file.
 * Quote metacharacters in arguments to compile mode.
