--- a/TODO
+++ b/TODO
@@ -1,9 +1,11 @@
-* Find link_static_flag for every C compiler, (don't forget native
-cc's for HP-UX and OSF/1).
+* Don't forget to find link_static_flag for native cc's on HP-UX and OSF/1.
+
+* Write installcheck for the demo directory.
 
 * Implement fuller support for profiled libraries (libNAME_p), and
 resolve naming difficulties for debuggable libraries (libNAME_g on
-Linux at least), old system 5 shared libraries (libNAME_s), etc.
+Linux at least), old system 5 shared libraries (libNAME_s), etc, maybe
+based on cflags.
 
 * What should be done about the difference between -fpic and -fPIC?
 
