--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-New in 0.6e:
+New in 0.7:
 * Total rewrite of libtool, along with a new model for library building.
 * Completely rewritten documentation for the new paradigm.
 * Sane handling of broken system linkers, such as the ones on AIX
@@ -13,7 +13,6 @@ New in 0.6e:
 * Support for stripping libraries during installation.
 * Library version information is now passed on the command line, not
   through a version file.
-* Quote metacharacters in arguments to compile mode.
 
 Version 0.6 was never released.
 
