--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* Implement `ld -r' on all platforms.
+
 * Don't forget to find link_static_flag for native cc's on HP-UX and OSF/1.
 
 * Write installcheck for the demo directory.
@@ -11,3 +13,6 @@ based on cflags.
 
 * GCC docs imply that all rs6000 code is PIC.  See if it is true of
 any other processors (like maybe powerpc).
+
+* Maybe choosing between ln -s and cp -p should be done in ltconfig,
+not ltmain.sh?
